--- a/kartowka_markowka_hub-frontend/src/Styles/Search.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/Search.css
@@ -4,4 +4,26 @@
 
     height: 80px;
     background-color: var(--grin-color-background);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+
+    .search__input-cover {
+        width: 70%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        .search__input {
+            background-color: white;
+            width: 90%;
+        }       
+    }
+
+    .search__city {
+        color: white;
+        font-size: 20px;    
+    }  
 }
