убирает изменение цвета ссылки после открытия в подвале

--- a/kartowka_markowka_hub-frontend/src/Styles/Footer.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/Footer.css
@@ -21,6 +21,10 @@
         a {
             text-decoration: none;
         }
+
+        a:visited {
+            color: black;
+        }
     }
 
     .footer__info {
