--- a/kartowka_markowka_hub-frontend/src/Styles/MainPage/NewProducts.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/MainPage/NewProducts.css
@@ -10,4 +10,7 @@
     height: 20vh;
     background-color: var(--gray-color);
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
