--- a/kartowka_markowka_hub-frontend/src/Styles/ProductCard.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/ProductCard.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: end;
     justify-content: space-around;
+    padding-bottom: 5px;
 
     .product-card__button {
         background-color: white;
