--- a/kartowka_markowka_hub-frontend/src/Styles/ProductCard.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/ProductCard.css
@@ -1,15 +1,11 @@
+@import url(./colors.css);
+
 .product-card {
-    border-radius: 10px;
-    display: flex;
-    align-items: end;
-    justify-content: space-around;
-    padding-bottom: 5px;
-
     .product-card__button {
-        background-color: white;
-        color: black;
+        background-color: var(--grin-color-background);
+        color: var(--grin-color);
     }
-
+    
     .product-card__button--buy {
         width: 60%;
     }
