меняет размер карточек новых продуктов

--- a/kartowka_markowka_hub-frontend/src/Styles/MainPage/NewProducts.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/MainPage/NewProducts.css
@@ -7,7 +7,7 @@
 
 .new-products__box {
     width: 90vw;
-    height: 20vh;
+    height: 250px;
     background-color: var(--gray-color);
     border-radius: 10px;
     display: flex;
