--- a/kartowka_markowka_hub-frontend/src/Styles/ProductsPage/ProductsPage.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/ProductsPage/ProductsPage.css
@@ -1,4 +1,10 @@
 .products-page {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    .products-page__buttons {
+        padding-left: 25px;    
+    }
+
+    .products-page__grid {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
 }
