--- a/kartowka_markowka_hub-frontend/src/Styles/ProductsPage/ProductsPage.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/ProductsPage/ProductsPage.css
@@ -1,6 +1,7 @@
 .products-page {
     .products-page__buttons {
-        padding-left: 25px;    
+        padding-top: 25px;
+        padding-left: 50px;    
     }
 
     .products-page__grid {
