--- a/kartowka_markowka_hub-frontend/src/Styles/MainPage/MainPage.css
+++ b/kartowka_markowka_hub-frontend/src/Styles/MainPage/MainPage.css
@@ -3,5 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 70vh;
+    height: 100%;
+    padding: 5px;
 }
